# gameserver

./: CMakeLists.txt  make.py
inc/: gameprotocol.hpp  player.hpp  server.hpp
src/: main.cpp  player.cpp  server.cpp
testclient/: testclient.py
